# dysphagia_project

./: .gitignore  README.md
nearpy/: README.md  pyproject.toml
nearpy/nearpy/: README.md  __init__.py
nearpy/nearpy/ai/: __init__.py  classification.py  datasets.py  features.py  trainer.py  utils.py
nearpy/nearpy/ai/callbacks/: __init__.py  visualizer.py
nearpy/nearpy/ai/datamodules/: __init__.py  audio.py  hemodynamix.py
nearpy/nearpy/ai/loss/: __init__.py  diff_detail.py  mape.py
nearpy/nearpy/ai/models/: __init__.py  audio.py  cnn.py  cnn_converters.py  encode.py  grunet.py  pinn.py
nearpy/nearpy/biosignals/: wiggers.py
nearpy/nearpy/biosignals/wiggers_reference/: LVP.csv  LVV.csv
nearpy/nearpy/features/: __init__.py  spectral.py  temporal.py
nearpy/nearpy/io/: __init__.py  console.py  conversion.py  reading.py
nearpy/nearpy/plots/: __init__.py  constants.py  decomposition.py  evaluation.py  frequency.py  projections.py  segment.py  summary.py  time_frequency.py  timedomain.py  utils.py
nearpy/nearpy/preprocess/: __init__.py  cvi.py  decomposition.py  filters.py  mel.py  quality.py  segment.py  spectrum.py
nearpy/nearpy/preprocess/saved_filters/: BP_fs100_FP0_15_FS14.npz  HP_fs10k_FP60.npz
nearpy/nearpy/utils/: __init__.py  accuracy.py  benchmark.py  files.py  mimo.py  transforms.py
notebooks/: 01_Full_Workflow_Analysis.ipynb  02_Full_Workflow_Analysis copy.ipynb  02_Full_Workflow_Analysis.ipynb  Jessie_test.ipynb
